<package format="2">
<name>aruco_detect with output to rviz</name>
<version>0.1</version>
<description>The aruco_detector_ocv package.</description>
<license>BSD</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>image_geometry</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>tf2_ros</build_depend>
<build_depend>tf2</build_depend>
<build_depend>image_transport</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>alfons_msgs</build_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>image_transport</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>image_geometry</exec_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>tf2</exec_depend>
<exec_depend>alfons_msgs</exec_depend>
</package>